--- a/easel.tex
+++ b/easel.tex
@@ -1,7 +1,7 @@
 The easel (esl) module implements a small set of functionality shared
 by all the modules: notably, the error-handling system.
 
-\section{Error handling}
+\section{Error handling conventions}
 
 Easel might be used in applications ranging from small command line
 utilities to complex graphical user interfaces and parallel
@@ -336,8 +336,47 @@ error?}\\ \hspace*{\fill} -- Franz Kafka, \emph{The Castle}
 \section{Replacements for C library functions}
 
 
-\section{File management}
+\section{Standard banner for Easel miniapplications}
 
+
+\section{File and path name manipulation}
+
+
+\subsection{Secure temporary files}
+
+A program may need to write and read temporary files.  Many of the
+methods for creating temporary files, even using standard library
+calls, are known to create exploitable security holes
+\citep{Wheeler03,ChenDeanWagner04}.
+
+Easel provides a secure portable POSIX procedure for obtaining an open
+temporary file handle, \ccode{esl\_tmpfile()}. This replaces the ANSI C
+\ccode{tmpfile()} function, which is said to be insecurely implemented
+on some platforms.  Because closing and reopening a temporary file can
+create an exploitable race condition under certain circumstances,
+\ccode{esl\_tmpfile()} does not return the name of the invisible file
+it creates, only an open \ccode{FILE *} handle to it. The tmpfile is
+not persistent, and it automatically vanishes when the \ccode{FILE *}
+handle is closed. The tmpfile is created in the usual system
+world-writable temporary directory, as indicated by \ccode{TMPDIR} or
+\ccode{TMP} environment variables, or \ccode{/tmp} if neither
+environment variable is defined.
+
+However, it is sometimes useful, if not necessary, to close and reopen
+a temporary file. For example, Easel's own test suites generate a
+variety of input files for testing input parsers. For this purpose,
+Easel provides the \ccode{esl\_tmpfile\_named()} procedure for
+creating a persistent tmpfile, which returns both an open \ccode{<FILE
+*>} handle and the name of the file.  Because the tmpfile name is
+known, the file may be closed and reopened.
+\ccode{esl\_tmpfile\_named()} creates its files relative to the
+current working directory, not in \ccode{TMPDIR}, in order to reduce
+the chances of creating the file in a shared directory where a race
+condition might be exploited. Nonetheless, secure use of
+\ccode{esl\_tmpfile\_named()} requires that you must only reopen a
+tmpfile for reading, not writing, and you must not trust the contents.
+(It may be possible for an attacker to replace the tmpfile with a
+symlink to another file.)
 
 \section{Internals}
 
