getopts: added esl_opt_IsSet(). easel.h: added eslENORESULT error code; increased precision of eslCONST_GOLD configure.ac: add check for sys/types.h (HAVE_SYS_TYPES_H) for ssi and sqio esl_normal (Gaussian) module in progress - added to svn but not compiled yet
git-svn-id: https://svn.janelia.org/eddylab/eddys/easel/trunk@144 db3e70e4-12e1-0310-b23f-81a6e3d09ba7

--- a/esl_getopts.tex
+++ b/esl_getopts.tex
@@ -51,6 +51,7 @@ configurable option. An application defines an array of
 \ccode{esl\_opt\_ProcessCmdline()}     & Parses options from the command line.\\
 \ccode{esl\_opt\_VerifyConfig()}       & Tests required and incompatible opts.\\
        \multicolumn{2}{c}{\textbf{retrieving option settings and arguments}}\\
+\ccode{esl\_opt\_IsSet()               & Returns TRUE if specified option was set.\\
 \ccode{esl\_opt\_GetBooleanOption()}   & Retrieve the state of a TRUE/FALSE option setting.\\
 \ccode{esl\_opt\_GetIntegerOption()}   & Retrieve an integer option argument.\\
 \ccode{esl\_opt\_GetFloatOption()}     & Retrieve a float option argument.\\
