--- a/easel.tex
+++ b/easel.tex
@@ -377,6 +377,10 @@ tmpfile for reading only, not for writing, and moreover, you must not
 trust the contents.  (It may be possible for an attacker to replace
 the tmpfile with a symlink to another file.)
 
+An example that shows both tmpfile mechanisms:
+
+\input{cexcerpts/easel_example_tmpfiles}
+
 \section{Internals}
 
 \subsection{Input maps}
