--- a/esl_vectorops.tex
+++ b/esl_vectorops.tex
@@ -31,10 +31,10 @@ Table~\ref{tbl:vectorops_api} lists the functions in the
 \ccode{esl\_vec\_\{D,F,I\}ArgMin()}      & Return index of minimum element in vector.\\
 \ccode{esl\_vec\_\{D,F,I\}SortIncreasing()}& Sort vector from smallest to largest.\\
 \ccode{esl\_vec\_\{D,F,I\}SortDecreasing()}& Sort vector from largest to smallest.\\
-\ccode{esl\_vec\_\{D,F,I\}Dump()         & Output vector to a stream as text.\\
+\ccode{esl\_vec\_\{D,F,I\}Dump()}        & Output vector to a stream as text.\\
     \multicolumn{2}{c}{\textbf{Type conversions}}\\
-\ccode{esl\_vec\_\{D,I\}2F()             & Convert to single precision floats. \\
-\ccode{esl\_vec\_\{F,I\}2D()             & Convert to double precision floats. \\
+\ccode{esl\_vec\_\{D,I\}2F()}            & Convert to single precision floats. \\
+\ccode{esl\_vec\_\{F,I\}2D()}            & Convert to double precision floats. \\
     \multicolumn{2}{c}{\textbf{Probability vectors}}\\
 \ccode{esl\_vec\_\{D,F\}Norm()}          & Normalize a probability vector of length n.\\
 \ccode{esl\_vec\_\{D,F\}Log()}           & Convert all items in vec to log probabilities. \\
